--- a/DeepLearning/4. 신경망 학습.md
+++ b/DeepLearning/4. 신경망 학습.md
@@ -57,7 +57,7 @@ def mean_squared_error(y, t):
 
 ### 4.2.2 교차 엔트로피 오차 (Cross Entropy Error, CEE)
 * MSE와 함께 손실함수로 많이 사용 됨.
-* 자연로그 함수를 사용하므로 llog 안의 값이 0이되어 마이너스 무한대의 값이 나올 수 있음
+* 자연로그 함수를 사용하므로 log 안의 값이 0이되어 마이너스 무한대의 값이 나올 수 있음
   * 코드로 구현시 로그 안에 아주 작은 값(delta)를 더해서 무한대 값이 나오지 안도록 함
   * 손실함수를 x축의 음의방향으로 평행이동한 것과 같은 효과로 
     출력값의 상대적 오차를 구하는데 영향을 주지는 않음
@@ -127,7 +127,7 @@ def numerical_diff(f, x):
 
 ### 4.3.2 수치미분의 예
 
-* 일 례로, $$y=0.01x^2 + 0.1x$$ 의 해석적 해는 $$\frac{df(x)}{dx} =0.02x+0.1$$이다.
+* 일 례로, $$y=0.01x^2 + 0.1x$$ 의 해석적 해는 $\frac{df(x)}{dx} =0.02x+0.1$이다.
 * x=5 일 때와 x=10일때의 해석적 해는 0.2와 0.3 이지만, 수치미분으로 구한 값은 
   이 값과 정확히 일치하지 않고, 약간의 오차를 가지는 것을 확인 할 수 있다.
 
@@ -186,4 +186,363 @@ def numerical_gradient(f, x):
 ```
 
 
+
+### 4.4.1 경사하강법
+
+* 신경망 학습에서도 기계학습과 마찬가지로 학습단계에서 **최적의 매개변수**(가중치/편향)를 찾아야 함
+  * 최적 : 손실함수가 최솟값이 될 때의 매개변수의 값
+* 매개변수의 공간이 넓어 어디가 최소값이 되는 지점인치 단번에 찾기 어려우며,
+  이런 상황에서 **기울기**를 이용해 함수의 최솟값을 찾으려는 것이 **경사하강법** 이다.
+  * 기울기가 가리키는 방향이 항상 최솟값이 존재하는 방향은 아니다.
+    (안장점 saddle point, 고원 platesu 등의 형태인 경우가 반례)
+  * 하지만 기울기를 따라 움직이면 함수의 값을 줄일 수 있는 것은 맞다.
+  * 수치적으로 접근하면, **경사법**은 현 위치에서 기울기가 가리키는 방향으로 일정 거리만큼 움직이는 작업을
+    반복적으로 수행하여 함수의 값을 점차 줄여나가는 과정을 의미한다.
+  * 이 기울기를 따라 움직이다보면 극소값을 구할 수 있고, 잘하면 최소값을 구할 수도 있다.
+    ( 참고 : 극소값 중 제일 작은 값이 최소값, http://blog.naver.com/at3650/40141157306 )
+
+
+* 경사하강법을 수식으로 나타내면 아래와 같다.
+  * $$\eta$$ 는 갱신하는 양을 뜻하며, 이를 신경망 학습에서는 **학습률**(learning rate) 라고 부른다.
+  * 아래 식은 1에 해당하는 갱신을 표현한 식이며, 이를 반복하여 함수의 값을 줄인다.
+  * 학습율($$\eta$$) 는 0.01 이나 0.001 등 작은 크기의 특정 값으로 미리정해야 한다.
+
+$$
+x_{0} = x_0 - \eta \frac{\partial f}{\partial x_0}  \\ 
+x_{1} = x_1 - \eta \frac{\partial f}{\partial x_1}
+$$
+* 이를 코드로 나타내면 다음과 같다
+  * f : 최적화하려는 함수
+  * init_x : 초기값
+  * lr : 학습룰(learning rate) , step_num : 경사법에 따른 반복 횟수
+```python
+def gradient_decent(f, init_x, lr=0.01, step_num=100):
+    x = init_x;
+    
+    for i in range(step_num)
+    	grad = numerical_gradient(f, x)
+        x = x - (lr * grad)
+        
+    return x
+```
+* **하이퍼파라메터**(hyper parameter) : 학습률 과 같이 사전에 사람이 지정해 줘야 하는 매개변수 값
+  * 학습률을 너무 크거나 너무 작은 값으로 설정하면 값이 거의 갱신되지 않거나 발산해 버리는 경우가 있다.
+  * $f(x_0 , x_1) = x_{0}^{2} + x_{1}^{2}$ 의 식에서 시작점 (-3.0, 4.0) 일때, 
+    학습률이 10.0이면 발산하고,  $$10^{-10}$$이면 거의 갱신안됨 (교재 pp.133 코드 참고)
+
+
+
+
+### 4.4.2 신경망 에서의 기울기
+
+* 형상이 2x3인 가중치 **W**와 손실함수가 **L**인 신경망의 기울기는 $ \frac{\partial L}{\partial W} $로 나타낼 수 있다.
+  *  $\frac{\partial L}{\partial W}$의 각 원소는 각각의 원소에 대한 편미분으로 가중치 **W** 와 형상이 같다.
+  *  이 때  $\frac{\partial L}{\partial w_{11}}$은 1행1열의 원소인 $w_{11}$을 조금 변경했을 때 손실함수의 변화를 의미한다.
+
+$$
+W = \begin{pmatrix}
+w_{11} & w_{21} & w_{31} \\ 
+w_{12} & w_{22} & w_{32}
+\end{pmatrix} \\
+\frac{\partial L}{\partial W} = \begin{pmatrix}
+\frac{\partial L}{\partial w_{11}} & \frac{\partial L}{\partial w_{21}} & \frac{\partial L}{\partial w_{31}} \\ 
+\frac{\partial L}{\partial w_{12}} & \frac{\partial L}{\partial w_{22}} & \frac{\partial L}{\partial w_{32}}
+\end{pmatrix}
+$$
+
+* 다음은 간단한 신경망의 예 이다.
+  * SimpleNet 라는 클래스를 선언했으며 형상이 2x3인 가중치 배열을 가지고 있다.
+  * 이 신경망의 활성화함수는 소프트맥스 함수이며, 오차함수는 교차엔트로피오차(CEE)를 사용한다.
+```python
+import sys, os
+sys.path.append(os.pardir)  # 부모 디렉터리의 파일을 가져올 수 있도록 설정
+import numpy as np
+from common.functions import softmax, cross_entropy_error
+from common.gradient import numerical_gradient
+
+
+class simpleNet:
+    def __init__(self):
+        self.W = np.random.randn(2,3) # 정규분포로 초기화
+
+    def predict(self, x):
+        return np.dot(x, self.W)
+
+    def loss(self, x, t):
+        z = self.predict(x)
+        y = softmax(z)
+        loss = cross_entropy_error(y, t)
+
+        return loss
+```
+
+* 신경망의 기울기는 다음과 같은 과정으로 구해 볼 수 있다.
+  1. 신경망의 입력 x 와 이 입력데이터 처리결과의 정답인 t 를 선언한다.
+  2. 신경망 클래스를 초기화한다. 이때 신경망의 가중치 W는 ```net.w```에 선언되어 있다.
+  3. 손실함수를 선언한다. 코드에서의 f 는 앞의 수식의 **L** 을 의미한다.
+     일반 함수 선언방식을 사용해도 되지만, 람다식으로 선언하면 아래 코드와 같이 간편하게 정의할 수 있다.
+  4. 손실함수의 기울기를 계산한다. 코드에서의 dW는 앞의 수식의 $\frac{\partial L}{\partial W}$를 의미한다.
+```python
+# 1. 입력값 x와 정답레이블 t 선언
+x = np.array([0.6, 0.9])
+t = np.array([0, 0, 1])
+
+# 2. 신경망 클래스를 초기화한다. 
+net = simpleNet()
+
+## 3. 손실함수를 선언한다.
+f = lambda w: net.loss(x, t)
+
+## 4. 손실함수의 미분인 기울기(gradient를 계산한다.)
+dW = numerical_gradient(f, net.W)
+print(dW)
+```
+
+* 위 코드의 **dW**가 다음과 같이 출력됬을때를 분석 해 보자. (실제 코드 실행시마다 값은 변한다.)
+  * $\frac{\partial L}{\partial w_{11}}$은 0.21이다. 이는 $w_{11}$을 h 만큼 늘리면 솔실함수는 0.21h 만큼 증가함을 뜻한다.
+  * $\frac{\partial L}{\partial w_{32}}$ 는 -0.54이다. 이는 $w_{32}$을 h 만큼 늘리면 솔실함수는 0.54h 만큼 감소함을 뜻한다.
+  * 따라서 손실함수를 줄이려면 $w_{11}$은 음의방향으로, $w_{32}$는 양의방향으로 갱신해야 함을 의미하며,
+  * 한번에 갱신되는 양에는  $w_{11}$보다 $w_{32}$가 기야하는 비중이 더 크다는 것을 알 수 있음
+
+```text
+[[ 0.21    0.14   -0.36 ]
+ [ 0.32    0.22   -0.54 ]]
+```
+
+
+
+## 4.5 학습 알고리즘 구현하기
+
+
+
+#### 신경망 학습의 절차
+
+* 신경망에는 적응 가능한 **가중치**와 **편향**이 있고, 이 가중치와 편향을 조절하는 것을 **학습**이라고 한다.
+  1. **미니배치** 
+     훈련데이터중 일부를 무작위로 선별해서 가져 온 것. 
+     이 데이터의 **손실함수**의 값을 줄이는 것이 학습의 목표임
+  2. **기울기 산출**
+     미니배치의 손실함수의 값을 줄이기위해 기울기를 구함. 
+     **기울기**는 손실함수의 값을 가장 작게 하는 방향을 제시함
+  3. **매개변수 갱신**
+     가중치 매개변수를 기울기의 방향으로 아주 조금 갱신함.
+     갱신하는 양을 **학습률**이라고 함.
+  4. **반복**
+     1~3 단계 반복
+* 미니배치 데이터를 경사하강법으로 매개변수의 값을 줄여가는 방법을 **확률적 경사 하강법**이라고 함
+* 확률적 경사하강법(Stochastic Gradient Descent)의 머리글자를 따 **SGD**라고 부르기도 함
+
+
+
+### 4.5.1 2층 신경망 클래스 구현하기
+* 아래는 2층 신경망을 하나의 클래스로 구현 한 코드임
+  * 2층 신경망 이므로 가중치도 $W^{(1)} , W^{(2)}$ 2개, 편향도 $b^{(1)}, b^{(2)}$ 의 2개를 설정한다.
+  * 가중치와 편향은 **params**라는 딕셔너리형 변수에 저장하며, 
+    가중치와 편향의 수치미분 경과도 같은 모양의 배열데이터로 **grads**라는 변수에 저장한다.
+  * 생성자의 파라메터로는 입력층의 뉴런의 수(input_size), 은닉층의 뉴런의 수(hidden_size), 출력층의 뉴런의 수(output_size)와 편향의 기준 값(weight_init_std) 으로 구성되어 있다.
+  * input_size는 입력 데이터의 수에 따라 결정되며, output_size은 출력 데이터의 수에 따라 결정되지만, 은닉층의 뉴런의 갯수인 hidden_size는 사용자가 임의로 설정할 수 있다. 
+* 뉴런의 추론을 실행하는 함수는 **predict**이다.
+  * 이때 철번째 은닉층에서의 활성화함수는 시그모이드를, 
+  * 두번째 은닉층의 활성화함수는 소프트맥스 함수를 사용하고 있으며, 
+  * 출력층의 활성화함수는 항등함수로 코드상에서는 생략되어 있다.
+* 추론결과를 평가하는 오차함수는 **loss**이며 교차엔트로피오차(CSE)를 이용한다.
+* **accuracy**함수는 추론결과로 나온 답과 실제 접답테이블을 비교하여 추론결과의 정답율을 계산한다.
+* **numerical_gradient**함수는 은닉층의 가중치와 편향의 수치미분을 계산해 딕셔너리타입으로 반환한다.
+
+
+```python
+import sys, os
+sys.path.append(os.pardir)  # 부모 디렉터리의 파일을 가져올 수 있도록 설정
+from common.functions import *
+from common.gradient import numerical_gradient
+
+
+class TwoLayerNet:
+
+    def __init__(self, input_size, hidden_size, output_size, weight_init_std=0.01):
+        # 가중치 초기화
+        self.params = {}
+        self.params['W1'] = weight_init_std * np.random.randn(input_size, hidden_size)
+        self.params['b1'] = np.zeros(hidden_size)
+        self.params['W2'] = weight_init_std * np.random.randn(hidden_size, output_size)
+        self.params['b2'] = np.zeros(output_size)
+
+    def predict(self, x):
+        W1, W2 = self.params['W1'], self.params['W2']
+        b1, b2 = self.params['b1'], self.params['b2']
+    
+        a1 = np.dot(x, W1) + b1
+        z1 = sigmoid(a1)
+        a2 = np.dot(z1, W2) + b2
+        y = softmax(a2)
+        
+        return y
+        
+    # x : 입력 데이터, t : 정답 레이블
+    def loss(self, x, t):
+        y = self.predict(x)
+        
+        return cross_entropy_error(y, t)
+    
+    def accuracy(self, x, t):
+        y = self.predict(x)
+        y = np.argmax(y, axis=1)
+        t = np.argmax(t, axis=1)
+        
+        accuracy = np.sum(y == t) / float(x.shape[0])
+        return accuracy
+        
+    # x : 입력 데이터, t : 정답 레이블
+    def numerical_gradient(self, x, t):
+        loss_W = lambda W: self.loss(x, t)
+        
+        grads = {}
+        grads['W1'] = numerical_gradient(loss_W, self.params['W1'])
+        grads['b1'] = numerical_gradient(loss_W, self.params['b1'])
+        grads['W2'] = numerical_gradient(loss_W, self.params['W2'])
+        grads['b2'] = numerical_gradient(loss_W, self.params['b2'])
+        
+        return grads
+```
+
+
+
+### 4.5.2 미니배치 학습 구현하기
+
+* 다음은 경사법으로 MNIST데이터의 미니배치를 학습하는 예시이다.
+  * 미니배치의 크기를 100으로 하고,
+  * 경사법에 의한 반복 횟수를 10000번으로 설정해여 
+  * 매 반복마다 경사하강법을 이용하여 매개변수를 갱신한다.
+* 매 학습시마다 오차를 계산하여 train_loss_list 배열에 저장한다.
+  * 학습횟수가 진행 될 수록 오차가 줄어드는 것을 볼 수 있음
+  * 즉, 데이터를 반복 학습함으로서 매개변수가 데이터에 적응하고 있다는 것을 뜻함
+
+```python
+import sys, os
+sys.path.append(os.pardir)  # 부모 디렉터리의 파일을 가져올 수 있도록 설정
+import numpy as np
+import matplotlib.pyplot as plt
+from dataset.mnist import load_mnist
+from two_layer_net import TwoLayerNet
+
+# 데이터 읽기
+(x_train, t_train), (x_test, t_test) = load_mnist(normalize=True, one_hot_label=True)
+
+# 하이퍼파라미터
+iters_num = 10000  # 반복 횟수를 적절히 설정한다.
+train_size = x_train.shape[0]
+batch_size = 100   # 미니배치 크기
+learning_rate = 0.1
+
+train_loss_list = []
+network = TwoLayerNet(input_size=784, hidden_size=50, output_size=10)
+
+for i in range(iters_num):
+    # 미니배치 획득
+    batch_mask = np.random.choice(train_size, batch_size)
+    x_batch = x_train[batch_mask]
+    t_batch = t_train[batch_mask]
+    
+    # 기울기 계산
+    grad = network.numerical_gradient(x_batch, t_batch)    
+    
+    # 매개변수 갱신
+    for key in ('W1', 'b1', 'W2', 'b2'):
+        network.params[key] -= learning_rate * grad[key]
+    
+    # 학습 경과 기록
+    loss = network.loss(x_batch, t_batch)
+    train_loss_list.append(loss)    
+```
+
+
+
+### 4.5.3 시험데이터로 평가하기
+
+* 학습 데이터를 이용하여 구한 가중치 값이 일반적인 경우에까지 적용 가능한지 검증이 필요함
+  * 득정한 학습데이터에만 최적화된 오버피팅이 일어나지 않았는지 확인해야 함
+  * 오버피팅이 일어난경우 학습데이터는 제대로 처리하지만 그 이외의 데이터는 잘 처리하지 못할 수 있음
+* **에폭**(Epoch) : 학습시 훈련데이터를 모두 소진했을때의 횟수를 기준으로 하는 단위
+  * 예를들어 훈련데이터 10000개를 100개 크기의 미니배치로 학습할 경우, 
+  * 확률적경사하강법으로 100회 반복하여 학습했을 때, 
+  * 모든 훈련데이터를 소진했다고 보고 이를 1 에폭 이라고 부른다. 
+* 다음은 앞서 2차 신경망 클래스를 이용한 MNIST학습을 진행하여
+  1에폭마다 훈련데이터와 시험데이터의 정확도를 계산하고 그래프로 표시한 예 이다.
+
+```python
+import sys, os
+sys.path.append(os.pardir)  # 부모 디렉터리의 파일을 가져올 수 있도록 설정
+import numpy as np
+import matplotlib.pyplot as plt
+from dataset.mnist import load_mnist
+from two_layer_net import TwoLayerNet
+
+# 데이터 읽기
+(x_train, t_train), (x_test, t_test) = load_mnist(normalize=True, one_hot_label=True)
+
+network = TwoLayerNet(input_size=784, hidden_size=50, output_size=10)
+
+# 하이퍼파라미터
+iters_num = 10000  # 반복 횟수를 적절히 설정한다.
+train_size = x_train.shape[0]
+batch_size = 100   # 미니배치 크기
+learning_rate = 0.1
+
+train_loss_list = []
+train_acc_list = []
+test_acc_list = []
+
+# 1에폭당 반복 수
+iter_per_epoch = max(train_size / batch_size, 1)
+
+for i in range(iters_num):
+    # 미니배치 획득
+    batch_mask = np.random.choice(train_size, batch_size)
+    x_batch = x_train[batch_mask]
+    t_batch = t_train[batch_mask]
+    
+    # 기울기 계산
+    #grad = network.numerical_gradient(x_batch, t_batch)
+    grad = network.gradient(x_batch, t_batch)
+    
+    # 매개변수 갱신
+    for key in ('W1', 'b1', 'W2', 'b2'):
+        network.params[key] -= learning_rate * grad[key]
+    
+    # 학습 경과 기록
+    loss = network.loss(x_batch, t_batch)
+    train_loss_list.append(loss)
+    
+    # 1에폭당 정확도 계산
+    if i % iter_per_epoch == 0:
+        train_acc = network.accuracy(x_train, t_train)
+        test_acc = network.accuracy(x_test, t_test)
+        train_acc_list.append(train_acc)
+        test_acc_list.append(test_acc)
+        print("train acc, test acc | " + str(train_acc) + ", " + str(test_acc))
+
+# 그래프 그리기
+markers = {'train': 'o', 'test': 's'}
+x = np.arange(len(train_acc_list))
+plt.plot(x, train_acc_list, label='train acc')
+plt.plot(x, test_acc_list, label='test acc', linestyle='--')
+plt.xlabel("epochs")
+plt.ylabel("accuracy")
+plt.ylim(0, 1.0)
+plt.legend(loc='lower right')
+plt.show()
+```
+
+* 위 코드의 실행결과로 출력된 그래프는 아래와 같다.
+  * 훈련데이터에대한 정확도는 실선으로 , 시험데이터에 대한 정확도는 점선으로 표시함
+  * 에폭이 진행 될 수록(학습이 진행 될 수록) 훈련데이터와 시험데이터의 정확도가 좋아지고있음
+  * 두 정확도 사이에 차이가 거의 없는것으로 보아 이 학습에는 오버피팅이 일어나고 있지 않음
+![accuracy](images\4_12_accuracy.png)
+* 만약 오버피팅이 일어난다면??
+  * 훈련이란 훈련데이터의 정확도를 높이는 방향으로 진행되므로 
+    훈련데이터의 정확도는 점점높아지는것이 일반적임
+  * 가중치가 훈련데이터에 지나치게 적응하기 시작하면 시험데이터의 정확도가 떨어지기 시작함
+    이 지점이 오버피팅이 일어나기 시작하는 지점임
+  * 오버피팅이 시작되는 순간을 포착해 학습을 중단하면 오버피팅을 효과적으로 예방할 수 있음
+    이러한 방법을 **조기종료(early stopping)**라 하며 6장에서 추가로 학습할 예정
 
